[package]
name = "devtoolbox"
version = "0.1.0"
authors = ["Joshua Junqueira <joshua.junqueira@gmail.com>"]
edition = "2018"
description = "Devtoolbox - offline developer utilities"
readme = "README.md"
license = "Apache 2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"], optional = true }

urlencoding = "2.1.0"

base64 = "0.13.0"

uuid = { version = "0.8", features = ["serde", "v4"] }

chrono = "0.4"

jsonxf = "1.1.1"

sqlformat = "0.1.8"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
